<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.allfound.bluetoothexample.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="makeDiscoverable"
                android:text="@string/title_make_discoverable" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="discoverDevices"
                android:text="@string/title_discover_devices" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_tap_to_connect" />

            <ListView
                android:id="@id/android:list"
                android:layout_width="fill_parent"
                android:layout_height="120dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_enter_message" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="sendMessage"
                android:text="@string/title_send_message" />

            <EditText
                android:id="@+id/message_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_message_for_device" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_message_received" />

            <TextView
                android:id="@+id/data_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
